# comp_vision

./: .gitignore  README  pyproject.toml
comp_vision/: custom_model.py
