[project]
name = "comp-vision"
version = "0.1.0"
description = ""
authors = [
    {name = "ludaskov",email = "ludmilaskovo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ultralytics (>=8.3.139,<9.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
